samples/_failures_safe/1761095875_5cb370_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78734591.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_78734591.c:154:9: error: expected expression at end of input
  154 |         while ((lexer->position <
      |         ^~~~~
./samples/SAFE/__tmp_78734591.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_78734591.c:154:9: error: expected declaration or statement at end of input
